[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/draw_gd/src/UI/Canvas/CanvasPreview.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/draw_gd/src/UI/TransparentChecker.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/draw_gd/src/UI/CanvasPreviewContainer.gd" type="Script" id=3]
[ext_resource path="res://addons/draw_gd/src/UI/Canvas/CameraMovement.gd" type="Script" id=4]
[ext_resource path="res://addons/draw_gd/src/Shaders/TransparentChecker.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/size = 10
shader_param/color1 = Color( 0.47, 0.47, 0.47, 1 )
shader_param/color2 = Color( 0.34, 0.35, 0.34, 1 )
shader_param/offset = Vector2( 0, 150 )
shader_param/scale = Vector2( 1, 1 )
shader_param/rect_size = Vector2( 0, 0 )
shader_param/follow_movement = false
shader_param/follow_scale = false

[node name="CanvasPreviewContainer" type="PanelContainer"]
margin_right = 278.0
margin_bottom = 164.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 157.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_left = 4.0
margin_right = 12.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "+"
align = 1

[node name="PreviewZoomSlider" type="VSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 16.0
margin_bottom = 132.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 3
step = 0.01

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_left = 5.0
margin_top = 136.0
margin_right = 10.0
margin_bottom = 150.0
size_flags_horizontal = 4
text = "-"
align = 1

[node name="PreviewViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 280.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Viewport" type="Viewport" parent="HBoxContainer/PreviewViewportContainer"]
size = Vector2( 260, 150 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="TransparentChecker" parent="HBoxContainer/PreviewViewportContainer/Viewport" instance=ExtResource( 2 )]
material = SubResource( 1 )

[node name="CanvasPreview" parent="HBoxContainer/PreviewViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="CameraPreview" type="Camera2D" parent="HBoxContainer/PreviewViewportContainer/Viewport"]
offset = Vector2( 32, 32 )
current = true
zoom = Vector2( 0.15, 0.15 )
script = ExtResource( 4 )

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/PreviewZoomSlider" to="." method="_on_PreviewZoomSlider_value_changed"]
